<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:id="@+id/siginLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:padding="@dimen/twenty_five_dp">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/ninty_dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/fourty"
            android:src="@drawable/logo" />


        <!-- Username Label -->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/seventy_dp"
            android:layout_marginBottom="@dimen/five_dp"

            >

            <EditText
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Password Label -->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/five_dp"
            android:layout_marginBottom="@dimen/five_dp"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/remember_me_checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fifteen_dp"
            android:layout_marginEnd="@dimen/fourty"
            android:buttonTint="@color/colorPrimaryDark"
            android:text="@string/remember_me"
            android:textColor="@color/black" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fifty_dp"
            android:background="@drawable/round_button"
            android:layout_marginStart="@dimen/fourty"
            android:layout_marginEnd="@dimen/fourty"
            >

            <Button
                android:id="@+id/btn_login"
                android:layout_width="270dp"
                android:layout_height="50dp"
                android:background="@color/transparant"
                android:text="@string/login"
                android:layout_gravity="center"
                android:gravity="center"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/twenty_sp"
                />
            <ProgressBar
                android:id="@+id/pb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:visibility="gone"
                android:theme="@style/WhiteAccent"

                />

        </FrameLayout>


    </LinearLayout>
</ScrollView>